--- a/composer.json
+++ b/composer.json
@@ -10,152 +10,6 @@
     "scripts": {
         "php-cs-fixer": "php-cs-fixer fix"
     },
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "git@github.com:phpnomad/symfony-event-dispatcher-integration.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@github.com:phpnomad/mysql-db-integration.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@github.com:phpnomad/symfony-cache-integration.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@github.com:phpnomad/di.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@github.com:phpnomad/update.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@github.com:phpnomad/privacy.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@github.com:phpnomad/symfony-event-dispatcher-integration.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@github.com:phpnomad/email.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@github.com:phpnomad/template.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@github.com:phpnomad/tasks.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@github.com:phpnomad/translate.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@github.com:phpnomad/rest.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@github.com:phpnomad/datastore.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@github.com:phpnomad/core.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@github.com:phpnomad/config.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@github.com:phpnomad/di.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@github.com:phpnomad/utils.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@github.com:phpnomad/event.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@github.com:phpnomad/loader.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@github.com:phpnomad/singleton.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@github.com:phpnomad/facade.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@github.com:phpnomad/enum-polyfill.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@github.com:phpnomad/logger.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@github.com:phpnomad/registry.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@github.com:phpnomad/framework.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@github.com:phpnomad/mutator.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@github.com:phpnomad/cache.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@github.com:phpnomad/db.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@github.com:phpnomad/auth.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@github.com:phpnomad/asset.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@github.com:phpnomad/twig-integration.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@github.com:phpnomad/json-config-integration.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@github.com:phpnomad/fastroute-integration.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@github.com:phpnomad/array-json-config.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@github.com:phpnomad/twig-integration.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@github.com:phpnomad/decorator.git"
-        }
-    ],
     "authors": [
         {
             "name": "Alex Standiford",
@@ -169,13 +23,13 @@
         }
     },
     "require": {
-        "phpnomad/core": "dev-main",
-        "phpnomad/symfony-event-dispatcher-integration": "dev-main",
-        "phpnomad/json-config-integration": "dev-main",
-        "phpnomad/datastore": "dev-main",
-        "phpnomad/fastroute-rest-integration": "dev-main",
-        "phpnomad/symfony-cache-integration": "dev-main",
-        "phpnomad/twig-integration": "dev-main",
+        "phpnomad/core": "^1.0",
+        "phpnomad/symfony-event-dispatcher-integration": "^1.0",
+        "phpnomad/json-config-integration": "^1.0",
+        "phpnomad/datastore": "^1.0",
+        "phpnomad/fastroute-rest-integration": "^1.0",
+        "phpnomad/symfony-cache-integration": "^1.0",
+        "phpnomad/twig-integration": "^1.0",
         "filp/whoops": "^2.16"
     },
     "config": {
